--- a/Final WEB-G2/dashboard.html
+++ b/Final WEB-G2/dashboard.html
@@ -53,7 +53,7 @@
 
         <div class="card">
             <div class="sales-row">
-                <img src="./pictures/m" class="sales-icon">
+                <img src="./pictures/money.png" class="sales-icon">
                 <div class="sales-info">Sales<br><span class="sales-amount">$850.00</span></div>
             </div>
         </div>
